<package>
  <name>iterative_planner_server</name>
  <version>0.6.0</version>
  <description>
    truck model
  </description>
  <author>Fan Shi</author>
  <maintainer email="shi@jsk.imi.i.u-tokyo.ac.jp">Fan Shi</maintainer>
  <license>BSD</license>
  <url>https://github.com/KahnShi/quadrotor_iterative_planner</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>octomap_server</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>teleop_twist_keyboard</build_depend>
  <build_depend>quadrotor_trajectory</build_depend>
  <build_depend>bspline_ros</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>
  <run_depend>hector_quadrotor_description</run_depend>
  <run_depend>hector_quadrotor_gazebo</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>octomap_server</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>octomap_ros</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>quadrotor_trajectory</run_depend>
  <run_depend>bspline_ros</run_depend>
  <run_depend>cmake_modules</run_depend>
</package>


